ninewinecfg: Add new programm to configure d3d9-nine.dll
Signed-off-by: Patrick Rudolph <siro@das-labor.org>

--- a/configure.ac
+++ b/configure.ac
@@ -4106,6 +4106,7 @@ WINE_CONFIG_MAKEFILE(programs/msinfo32)
 WINE_CONFIG_MAKEFILE(programs/net)
 WINE_CONFIG_MAKEFILE(programs/netsh)
 WINE_CONFIG_MAKEFILE(programs/netstat)
+WINE_CONFIG_MAKEFILE(programs/ninewinecfg)
 WINE_CONFIG_MAKEFILE(programs/ngen)
 WINE_CONFIG_MAKEFILE(programs/notepad)
 WINE_CONFIG_MAKEFILE(programs/oleview)
