ninewinecfg: Add commandline parser and call 32bit on WoW
Signed-off-by: Patrick Rudolph <siro@das-labor.org>

--- a/configure.ac
+++ b/configure.ac
@@ -1258,6 +1258,7 @@ OpenGL and Direct3D won't be supported.])
     then
         AC_MSG_NOTICE([Checking for d3dadapter9 library dependencies])
         D3D9NINE_LIBS=""
+        NINEWINECFG_LIBS=""
         D3D9NINE_MISSING_LIBS=""
         AC_CHECK_LIB(xcb,xcb_request_check,[AC_SUBST(D3D9NINE_LIBS,["$D3D9NINE_LIBS -lxcb"])])
         test "x$ac_cv_lib_xcb_xcb_request_check" != xyes && D3D9NINE_MISSING_LIBS="libxcb "
@@ -1277,7 +1278,12 @@ OpenGL and Direct3D won't be supported.])
         AC_CHECK_LIB(GL,glGenFramebuffers,[AC_SUBST(D3D9NINE_LIBS,["$D3D9NINE_LIBS -lGL"])])
         test "x$ac_cv_lib_GL_glGenFramebuffers" != xyes && D3D9NINE_MISSING_LIBS="libGL "
         AC_CHECK_LIB(EGL,eglCreateContext,[AC_SUBST(D3D9NINE_LIBS,["$D3D9NINE_LIBS -lEGL"])])
-        test "x$ac_cv_lib_EGL_eglCreateContext" != xyes && D3D9NINE_MISSING_LIBS="${D3D9NINE_MISSING_LIBS}libEGL"
+        test "x$ac_cv_lib_EGL_eglCreateContext" != xyes && D3D9NINE_MISSING_LIBS="${D3D9NINE_MISSING_LIBS}libEGL "
+        # libdl
+        AC_CHECK_LIB(dl,dlopen,[AC_SUBST(NINEWINECFG_LIBS,["$NINEWINECFG_LIBS -ldl"])])
+        test "x$ac_cv_lib_dl_dlopen" != xyes && D3D9NINE_MISSING_LIBS="${D3D9NINE_MISSING_LIBS}libdl "
+
+        AC_DEFINE(NINEWINECFG_LIBS, $NINEWINECFG_LIBS, [ninewinecfg extra libs])
 
         if test "x$D3D9NINE_MISSING_LIBS" != x
         then
@@ -1356,6 +1362,7 @@ OpenGL and Direct3D won't be supported.])
                 fi
             fi
             AC_DEFINE_UNQUOTED(D3D9NINE_MODULEPATH, ["`echo ${D3DADAPTER9_MODULEDIR}/d3dadapter9.so.1`"], [Gallium Nine module path])
+
             # Check module
             CPPFLAGSBAK=$CPPFLAGS
             # link against libdl
