--- a/include/config.h.in
+++ b/include/config.h.in
@@ -1500,6 +1500,9 @@
    <sysmacros.h>. */
 #undef MAJOR_IN_SYSMACROS
 
+/* ninewinecfg extra libs */
+#undef NINEWINECFG_LIBS
+
 /* Define to the address where bug reports for this package should be sent. */
 #undef PACKAGE_BUGREPORT
 
