--- a/programs/ninewinecfg/Makefile.in
+++ b/programs/ninewinecfg/Makefile.in
@@ -1,7 +1,7 @@
 MODULE    = ninewinecfg.exe
 APPMODE   = -mwindows
 IMPORTS   = shell32 gdi32 advapi32 user32 comctl32 ole32
-EXTRALIBS = -ldl
+EXTRALIBS = $(NINEWINECFG_LIBS)
 
 C_SRCS = main.c
 
