--- a/dlls/d3d9-nine/Makefile.in
+++ b/dlls/d3d9-nine/Makefile.in
@@ -10,6 +10,7 @@ C_SRCS = \
         present.c \
         dri3.c \
         wndproc.c \
-        shader_validator.c
+        shader_validator.c \
+        backend.c
 
 RC_SRCS = version.rc
