d3d9-nine: Move DRI2 stuff into dri2.c
Add dri2.c and dri2.h.
Move all DRI2 related functions to the new files.

Signed-off-by: Patrick Rudolph <siro@das-labor.org>

--- a/dlls/d3d9-nine/Makefile.in
+++ b/dlls/d3d9-nine/Makefile.in
@@ -11,6 +11,7 @@ C_SRCS = \
         dri3.c \
         wndproc.c \
         shader_validator.c \
-        backend.c
+        backend.c \
+        dri2.c
 
 RC_SRCS = version.rc
