d3d9-nine: Split dri3.c
Add xcb_present.c and xcb_present.h.
Move PRESENT* functions to xcb_present.c and leave DRI3 functions
in dri3.c.

Signed-off-by: Patrick Rudolph <siro@das-labor.org>

--- a/dlls/d3d9-nine/Makefile.in
+++ b/dlls/d3d9-nine/Makefile.in
@@ -12,6 +12,7 @@ C_SRCS = \
         wndproc.c \
         shader_validator.c \
         backend.c \
-        dri2.c
+        dri2.c \
+        xcb_present.c
 
 RC_SRCS = version.rc
