--- a/.travis.yml
+++ b/.travis.yml
@@ -20,45 +20,7 @@ env:
     - CONFIGURE_ARGS=--enable-win64
     #FIXME 32bit build
 script:
-  >
-  ./configure 
-  --with-x 
-  --without-freetype 
-  --without-fontconfig 
-  --without-curses 
-  --without-cms 
-  --without-gstreamer 
-  --without-alsa 
-  --without-capi 
-  --without-opencl 
-  --without-openal 
-  --without-netapi  
-  --without-mpg123 
-  --without-ldap 
-  --without-krb5 
-  --without-jpeg 
-  --without-gnutls 
-  --without-coreaudio 
-  --without-dbus 
-  --without-cups 
-  --without-gsm 
-  --without-osmesa 
-  --without-oss  
-  --without-pcap 
-  --without-png 
-  --without-pulse 
-  --without-sane 
-  --without-tiff 
-  --without-udev 
-  --without-v4l 
-  --without-xinput 
-  --without-xinput2 
-  --without-xml 
-  --without-xslt 
-  --without-zlib 
-  --with-d3d9-nine 
-  --disable-tests 
-  $CONFIGURE_ARGS
+  - ./configure --with-x --without-freetype --without-fontconfig --without-curses  --without-cms  --without-gstreamer  --without-alsa  --without-capi  --without-opencl  --without-openal  --without-netapi   --without-mpg123  --without-ldap  --without-krb5  --without-jpeg  --without-gnutls  --without-coreaudio  --without-dbus  --without-cups  --without-gsm  --without-osmesa  --without-oss   --without-pcap  --without-png  --without-pulse  --without-sane  --without-tiff  --without-udev  --without-v4l  --without-xinput  --without-xinput2  --without-xml  --without-xslt  --without-zlib  --with-d3d9-nine --disable-tests $CONFIGURE_ARGS
   - make include
   - make __builddeps__
   - make d3d9-nine.dll.so -C dlls/d3d9-nine
