--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 before_install:
   - sudo dpkg --add-architecture i386
+  - sudo systemctl enable mysql
   - sudo apt-get install -y mysql-server-5.7
   - sudo service mysql start
   - sudo apt-get install -y pkg-config software-properties-common wine-development gettext git build-essential flex bison gcc-multilib g++-multilib libegl1-mesa-dev libxcb-cursor-dev x11proto-core-dev x11proto-dri2-dev x11proto-dri3-dev libgl1-mesa-dev libxext-dev libxcb-dri3-dev libxcb-dri2-0-dev curl apt-transport-https
