--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,12 @@
 before_install:
   - sudo dpkg --add-architecture i386
   - sudo systemctl enable mysql
-  - sudo apt-get install -y mysql-server-5.7
-  - sudo service mysql start
   - sudo apt-get install -y pkg-config software-properties-common wine-development gettext git build-essential flex bison gcc-multilib g++-multilib libegl1-mesa-dev libxcb-cursor-dev x11proto-core-dev x11proto-dri2-dev x11proto-dri3-dev libgl1-mesa-dev libxext-dev libxcb-dri3-dev libxcb-dri2-0-dev curl apt-transport-https
+  - sudo apt-get install -y libgl1-mesa-dev:i386 pkg-config:i386 libegl1-mesa-dev:i386 
   - sudo add-apt-repository -y ppa:oibaf/graphics-drivers
   - sudo apt-get update -qq
   - sudo apt-get dist-upgrade -y
-  - sudo apt-get install -y libegl1-mesa-dev
+  - sudo apt-get install -y libegl1-mesa-dev libgl1-mesa-dev:i386
 addons:
   apt:
     update: true
@@ -22,9 +21,9 @@ env:
     - TIMEOUT=1000
   matrix:
     - CONFIGURE_ARGS=--enable-win64
-    #FIXME 32bit build
+    - CONFIGURE_ARGS=LDFLAGS=-L/usr/lib/i386-linux-gnu/ PKG_CONFIG_PATH=/usr/lib/i386-linux-gnu/pkgconfig/
 script:
-  - ./configure --with-x --without-freetype --without-glu --without-fontconfig --without-curses  --without-cms  --without-gstreamer  --without-alsa  --without-capi  --without-opencl  --without-openal  --without-netapi   --without-mpg123  --without-ldap  --without-jpeg  --without-gnutls  --without-coreaudio  --without-dbus  --without-cups  --without-gsm  --without-osmesa  --without-oss   --without-pcap  --without-png  --without-pulse  --without-sane  --without-tiff  --without-udev  --without-v4l  --without-xinput  --without-xinput2  --without-xml  --without-xslt  --without-zlib  --with-d3d9-nine --disable-tests $CONFIGURE_ARGS
+  - ./configure --with-x --without-freetype --without-glu --without-fontconfig --without-curses  --without-cms  --without-gstreamer  --without-alsa  --without-capi  --without-opencl  --without-openal  --without-netapi   --without-mpg123  --without-ldap  --without-jpeg  --without-gnutls  --without-coreaudio  --without-dbus  --without-cups  --without-gsm  --without-osmesa  --without-oss   --without-pcap  --without-png  --without-pulse  --without-sane  --without-tiff  --without-v4l  --without-xinput  --without-xinput2  --without-xml  --without-xslt  --without-zlib  --with-d3d9-nine --disable-tests $CONFIGURE_ARGS
   - make include
   - make __builddeps__
   - make d3d9-nine.dll.so -C dlls/d3d9-nine
