--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
   - sudo add-apt-repository -y ppa:oibaf/graphics-drivers
   - sudo apt-get update -qq
   - sudo apt-get dist-upgrade -y
-  - sudo apt-get install -y libegl1-mesa-dev libgl1-mesa-dev:i386 libgl1-mesa-dri libgl1-mesa-dri:i386
+  - sudo apt-get install -y libegl1-mesa-dev libegl1-mesa-dev:i386 libgl1-mesa-dri libgl1-mesa-dri:i386
 addons:
   apt:
     update: true
